// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[CCR] follower index serialization deserializeFollowerIndex() deserializes Elasticsearch follower index object 1`] = `
Object {
  "leaderIndex": "leader 1",
  "maxOutstandingReadRequests": 1,
  "maxOutstandingWriteRequests": 1,
  "maxReadRequestOperationCount": 1,
  "maxReadRequestSize": "1b",
  "maxRetryDelay": "1s",
  "maxWriteBufferCount": 1,
  "maxWriteBufferSize": "1b",
  "maxWriteRequestOperationCount": 1,
  "maxWriteRequestSize": "1b",
  "name": "follower index 1",
  "readPollTimeout": "1s",
  "remoteCluster": "cluster 1",
  "shards": Array [
    Object {
      "bytesReadCount": 1,
      "failedReadRequestsCount": 1,
      "failedWriteRequestsCount": 1,
      "followerGlobalCheckpoint": 1,
      "followerMappingVersion": 1,
      "followerMaxSequenceNum": 1,
      "followerSettingsVersion": 1,
      "id": 1,
      "lastRequestedSequenceNum": 1,
      "leaderGlobalCheckpoint": 1,
      "leaderIndex": "leader 1",
      "leaderMaxSequenceNum": 1,
      "operationsReadCount": 1,
      "operationsWrittenCount": 1,
      "outstandingReadRequestsCount": 1,
      "outstandingWriteRequestsCount": 1,
      "readExceptions": Array [],
      "remoteCluster": "cluster 1",
      "successfulReadRequestCount": 1,
      "successfulWriteRequestsCount": 1,
      "timeSinceLastReadMs": 1,
      "totalReadRemoteExecTimeMs": 1,
      "totalReadTimeMs": 1,
      "totalWriteTimeMs": 1,
      "writeBufferOperationsCount": 1,
      "writeBufferSizeBytes": 1,
    },
    Object {
      "bytesReadCount": undefined,
      "failedReadRequestsCount": undefined,
      "failedWriteRequestsCount": undefined,
      "followerGlobalCheckpoint": undefined,
      "followerMappingVersion": undefined,
      "followerMaxSequenceNum": undefined,
      "followerSettingsVersion": undefined,
      "id": "shard 2",
      "lastRequestedSequenceNum": undefined,
      "leaderGlobalCheckpoint": undefined,
      "leaderIndex": "leader_index 2",
      "leaderMaxSequenceNum": undefined,
      "operationsReadCount": undefined,
      "operationsWrittenCount": undefined,
      "outstandingReadRequestsCount": undefined,
      "outstandingWriteRequestsCount": undefined,
      "readExceptions": undefined,
      "remoteCluster": "remote_cluster 2",
      "successfulReadRequestCount": undefined,
      "successfulWriteRequestsCount": undefined,
      "timeSinceLastReadMs": undefined,
      "totalReadRemoteExecTimeMs": undefined,
      "totalReadTimeMs": undefined,
      "totalWriteTimeMs": undefined,
      "writeBufferOperationsCount": undefined,
      "writeBufferSizeBytes": undefined,
    },
  ],
  "status": "active",
}
`;

exports[`[CCR] follower index serialization deserializeShard() deserializes shard 1`] = `
Object {
  "bytesReadCount": 1,
  "failedReadRequestsCount": 1,
  "failedWriteRequestsCount": 1,
  "followerGlobalCheckpoint": 1,
  "followerMappingVersion": 1,
  "followerMaxSequenceNum": 1,
  "followerSettingsVersion": 1,
  "id": 1,
  "lastRequestedSequenceNum": 1,
  "leaderGlobalCheckpoint": 1,
  "leaderIndex": "leader index",
  "leaderMaxSequenceNum": 1,
  "operationsReadCount": 1,
  "operationsWrittenCount": 1,
  "outstandingReadRequestsCount": 1,
  "outstandingWriteRequestsCount": 1,
  "readExceptions": Array [
    "read exception",
  ],
  "remoteCluster": "remote cluster",
  "successfulReadRequestCount": 1,
  "successfulWriteRequestsCount": 1,
  "timeSinceLastReadMs": 1,
  "totalReadRemoteExecTimeMs": 1,
  "totalReadTimeMs": 1,
  "totalWriteTimeMs": 1,
  "writeBufferOperationsCount": 1,
  "writeBufferSizeBytes": 1,
}
`;

exports[`[CCR] follower index serialization serializeFollowerIndex() serializes object to Elasticsearch follower index object 1`] = `
Object {
  "leader_index": "leader index",
  "max_outstanding_read_requests": 1,
  "max_outstanding_write_requests": 1,
  "max_read_request_operation_count": 1,
  "max_read_request_size": "1b",
  "max_retry_delay": "1s",
  "max_write_buffer_count": 1,
  "max_write_buffer_size": "1b",
  "max_write_request_operation_count": 1,
  "max_write_request_size": "1b",
  "read_poll_timeout": "1s",
  "remote_cluster": "remote cluster",
}
`;
